# kimai-everyday

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/: demo.tape
docs/adr/: 0001-llm-pattern-parsing.md  0002-no-duplicate-detection.md  0003-llm-resolves-project-and-activity.md
openapi/: document.json
src/kimai_everyday/: __main__.py  cli.py  config.py  expansion.py  kimai.py  llm.py  resolution.py  types.py  wizard.py
tests/: test_config.py  test_expansion.py  test_kimai.py  test_llm.py  test_resolution.py
