[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimai-everyday"
version = "0.2.0"
description = "A small TUI that turns natural-language recurrence sentences into Kimai timesheet entries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Bykovski", email = "michael.bykovski@computerra.de" }]
dependencies = [
    "anthropic>=0.40",
    "questionary>=2.0",
    "rich>=13.7",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
kimai-everyday = "kimai_everyday.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
